# mexcpp

./: CMakeLists.txt  README.md
mat/: Exception.hpp  Forward.hpp  MatFile.hpp
mexcpp/: Functions.hpp  Size.hpp  TypeTraits.hpp  mexcpp.hpp
mx/: Array.hpp  ClassId.hpp  Forward.hpp  NumericArray.hpp  String.hpp  StructArray.hpp
